X11: Use correct width and height for region selection window and its contents when scaling is enabled

BUG: 400921